src/objects/CventEvents__DataRefreshSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Stores the Cvent sync configuration.</description>
    <fields>
        <fullName>CventEvents__Frequency__c</fullName>
        <description>Stores the frequency of automatic sync.</description>
        <inlineHelpText>Stores the frequency of automatic sync.</inlineHelpText>
        <label>Frequency</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CventEvents__IsConfigured__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the automatic sync is configured.</description>
        <inlineHelpText>Indicates whether the automatic sync is configured.</inlineHelpText>
        <label>Is Configured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__IsPending__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether there is pending sync process.</description>
        <inlineHelpText>Indicates whether there is pending sync process.</inlineHelpText>
        <label>Pending Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__LastSyncDate__c</fullName>
        <description>The last date that the synchronization occurred.</description>
        <inlineHelpText>The last date that the synchronization occurred.</inlineHelpText>
        <label>Last Synced Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CventEvents__RunRelatedSync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the need to run the related sync right after the main sync took place.</description>
        <inlineHelpText>Indicates whether the need to run the related sync right after the main sync took place.</inlineHelpText>
        <label>Run Related Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__Status__c</fullName>
        <description>Last sync process status.</description>
        <inlineHelpText>Last sync process status.</inlineHelpText>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__Unit__c</fullName>
        <description>Stores the unit of automatic sync.</description>
        <inlineHelpText>Stores the unit of automatic sync.</inlineHelpText>
        <label>Unit</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Data Refresh Settings</label>
</CustomObject>